<resources>
    <string name="app_name">Giku</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don’t have an account?&#160;</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?&#160;</string>
    <string name="match_your_password">Match your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="please_enter_your_email_to_reset_the_password">Please enter your email to reset the password</string>
    <string name="continue_text">Continue</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="verification_code">Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="name_is_required">Name is required</string>
    <string name="name_must_be_at_least_3_characters">Name must be at least 3 characters</string>
    <string name="email_is_required">Email is required</string>
    <string name="enter_a_valid_email_address">Enter a valid email address</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="password_must_contain_at_least_one_uppercase_letter">Password must contain at least one uppercase letter</string>
    <string name="password_must_contain_at_least_one_lowercase_letter">Password must contain at least one lowercase letter</string>
    <string name="password_must_contain_at_least_one_digit">Password must contain at least one digit</string>
    <string name="password_must_contain_at_least_one_special_character"><![CDATA[Password must contain at least one special character (@#$%^&+=)]]></string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="login_success">Login successfully</string>
    <string name="child_profile_input_form">Child Profile Input Form</string>
    <string name="error_empty_email">Please enter your email to proceed.</string>
    <string name="success_forgot_password">A verification code has been sent to your email.</string>
    <string name="password_reset_success">Reset password success</string>
    <string name="error_user_already_exists">User already exists. Please use a different email.</string>
    <string name="error_request_timeout">Request timeout. Please check your network connection and try again.</string>
    <string name="error_server">Server error. Please try again later.</string>
    <string name="error_unknown">An unknown error occurred. Please try again.</string>
    <string name="invalid_credentials">Invalid credentials. Please check your email and password.</string>
    <string name="error_user_not_found">No account found with the provided email.</string>
    <string name="verification_required">Verification required before resetting password.</string>
    <string name="reset_time_expired">The reset time has expired. Please request a new link.</string>
    <string name="verification_code_expired">Verification code has expired. Please request a new code.</string>
    <string name="invalid_verification_code">Invalid verification code. Please check and try again.</string>
    <string name="error_internal_server_error">Internal server error. Please try again later.</string>
    <string name="successful_login">You have successfully logged in.</string>
    <string name="user_registered_successfully">Your account has been successfully created. You can now log in.</string>
    <string name="verification_code_sent_to_email">A verification code has been sent to your email. Please check your inbox.</string>
    <string name="verification_successful">Your verification was successful. You can now proceed.</string>
    <string name="password_updated_successfully">Your password has been successfully updated.</string>
    <string name="set_a_new_passwod">Set a new passwod</string>
    <string name="analyze">Analyze</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="select_date">Select Date</string>
    <string name="text_nutritional_content">
        Nutritional Content:\n- Calories (kcal): 160\n-
        Fat (g): 2.5\n- Protein (g): 4\n- Carbohydrates (g): 31\n- Sugar (g): 8\n- Sodium (g): 0.1\n-
        Vitamin A (%): 25\n- Vitamin D (%): 70\n- Vitamin E (%): 35\n- Vitamin K (%): 0\n-
        Vitamin B1 (Thiamine) (%): 40\n- Vitamin B2 (Riboflavin) (%): 50\n- Vitamin B3 (Niacin) (%): 50\n-
        Vitamin B5 (Pantothenic Acid) (%): 30\n- Vitamin B6 (Pyridoxine) (%): 95\n-
        Vitamin B9 (Folic Acid) (%): 15\n- Vitamin B12 (Cobalamin) (%): 55\n- Vitamin C (%): 40\n-
        Biotin (%): 60\n- Potassium (%): 60\n- Calcium (%): 65\n- Phosphorus (%): 45\n-
        Magnesium (%): 40\n- Iron (%): 85\n- Zinc (%): 100\n- Copper (%): 0\n- Iodine (%): 30\n-
        Selenium (%): 0\n- Choline (%): 15\n- Isoleucine (g): 0\n- Leucine (g): 0\n- Lysine (g): 0\n-
        Methionine (g): 0\n- Phenylalanine (g): 0\n- Threonine (g): 0\n- Tryptophan (g): 0\n-
        Valine (g): 0\n- Taurine (g): 0\n- Chloride (g): 0
    </string>
    <string name="text_cta_analysis">Hello, \nAnalyze your child food</string>
    <string name="confidence">Confidence: %1$s</string>
    <string name="child_profile">Child Profile</string>
    <string name="add_your_child">Add Your Child</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author</string>
    <string name="article_title">Article Title</string>
    <string name="hello_nthis_is_the_result_of_your_analysis">Hello, \nThis is the result of your analysis</string>
    <string name="confidence_score_0_87">Confidence Score: 0.87</string>
    <string name="product_name">Product Name</string>
    <string name="feature_article">Feature Article</string>
    <string name="article_title_with_long_text">Article Title With Long Text</string>
    <string name="rotate_button">Rotate Button</string>
    <string name="capture_button">Capture Button</string>
    <string name="scroll_the_screen">Scroll the screen</string>
    <string name="hello_ntap_below_to_view_your_child_s_summary">Hello,\nTap below to view your child\'s summary</string>
    <string name="december_2024">December, 2024</string>
    <string name="recent_analysis">Recent Analysis</string>
    <string name="analysis">Analysis</string>
    <string name="articles">Articles</string>
    <string name="december_08_2024">December 08, 2024</string>
    <string name="other_information">Other Information</string>
    <string name="enter_the_pin">Enter the pin</string>
    <string name="child_age">child Age</string>
    <string name="child_name">Child Name</string>
    <string name="day">Day</string>
    <string name="_12">12</string>
    <string name="how_home_food_availability_affects_young_children_s_nutrient_intake">How home food availability affects young children\'s nutrient intake</string>
    <string name="find_more">Find More</string>
    <string name="news_image">News Image</string>
    <string name="parenting_and_home_environment_influence_children_s_exercise_and_eating_habits">Parenting and home environment influence children\'s exercise and eating habits</string>
    <string name="news_photo">News Photo</string>
    <string name="languages">Languages</string>
    <string name="logout">Logout</string>
</resources>