<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.auth.SetNewPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.025"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.10"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalLogo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSetNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_a_new_passwod"
        android:textColor="@color/md_theme_onBackground"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalLogo"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textStyle="bold"
        android:textColor="@color/md_theme_onBackground"
        app:layout_constraintTop_toBottomOf="@id/tvSetNewPassword"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalEnd"
        app:layout_constraintTop_toBottomOf="@id/tvPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:elegantTextHeight="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_password"
        android:textStyle="bold"
        android:textColor="@color/md_theme_onBackground"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalEnd"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/match_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:elegantTextHeight="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/confirm"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="20dp"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalEnd"
        app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:trackColor="@color/md_theme_secondaryFixedDim"
        app:indicatorColor="@color/md_theme_primary"
        app:indicatorSize="50dp"
        app:indicatorDirectionCircular="clockwise"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>